--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsVZbj88-WsJ8G5GwLu_55MKNtvvvaL7k"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsVZbj88-WsJ8G5GwLu_55MKNtvvvaL7k&libraries=geometry"
   type="text/javascript"></script>
 </head>
 
