--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsVZbj88-WsJ8G5GwLu_55MKNtvvvaL7k&libraries=geometry"
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" /><script src="https://code.jquery.com/jquery-1.11.3.min.js" charset="UTF-8"></script>
+
+  <link href="https://cdn.paymentez.com/ccapi/sdk/payment_stable.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.paymentez.com/ccapi/sdk/payment_stable.min.js" charset="UTF-8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUZs5sCML7IL7WAF_WpwwMPDHn8GrE258&libraries=geometry"
   type="text/javascript"></script>
 </head>
 
